complete analysis on snarkification

--- a/dp1/doc/bibliography.bib
+++ b/dp1/doc/bibliography.bib
@@ -40,10 +40,48 @@
 	note = {[Accessed 29-05-2025]},
 }
 
-@misc{justinDrakeBeamchain,
+@article{GoldreichNPProofs,
+  title     = {Proofs that yield nothing but their validity or all languages in NP have zero-knowledge proof systems},
+  author    = {Goldreich, Oded and Micali, Silvio and Wigderson, Avi},
+  journal   = {Journal of the ACM (JACM)},
+  volume    = {38},
+  number    = {3},
+  pages     = {690--728},
+  year      = {1991},
+  publisher = {ACM New York, NY, USA}
+}
+
+@inbook{FiatShamir,
+  title     = {How To Prove Yourself: Practical Solutions to Identification and Signature Problems},
+  isbn      = {9783540180470},
+  url       = {http://dx.doi.org/10.1007/3-540-47721-7_12},
+  doi       = {10.1007/3-540-47721-7_12},
+  booktitle = {Lecture Notes in Computer Science},
+  publisher = {Springer Berlin Heidelberg},
+  author    = {Fiat,  Amos and Shamir,  Adi},
+  pages     = {186-194}
+}
+
+@misc{BCCT11,
+      author = {Nir Bitansky and Ran Canetti and Alessandro Chiesa and Eran Tromer},
+      title = {From Extractable Collision Resistance to Succinct Non-Interactive Arguments of Knowledge, and Back Again},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2011/443},
+      year = {2011},
+      url = {https://eprint.iacr.org/2011/443}
+}
+
+@misc{JustinDrakeBeamchain,
 	author = {},
 	title = { - {Y}ou{T}ube --- youtube.com},
 	howpublished = {\url{https://www.youtube.com/watch?v=lRqnFrqpq4k}},
+	year = {},
+	note = {[Accessed 31-05-2025]},
+}
+
+@misc{NativeRollups,
+	author = {},
+	title = {{N}ative rollups—superpowers from {L}1 execution --- ethresear.ch},
+	howpublished = {\url{https://ethresear.ch/t/native-rollups-superpowers-from-l1-execution/21517}},
 	year = {},
 	note = {[Accessed 31-05-2025]},
 }
