--- a/dp1/doc/content/analysis/ethereum.tex
+++ b/dp1/doc/content/analysis/ethereum.tex
@@ -44,7 +44,7 @@ of state, is guaranteed by the consensus layer \ref{subsec:ethereum_consensus}},
 outputs next valid state:
 
 \[
-F(S_n, T) = S_{n+1}
+	F(S_n, T) = S_{n+1} \label{eq:state_transition}
 \]
 
 Thus, Ethereum's state transition function is described by the EVM. This function
