--- a/dp1/doc/pages/abbreviations.tex
+++ b/dp1/doc/pages/abbreviations.tex
@@ -10,13 +10,16 @@
 \vskip 1cm
 
 \begin{tabular}{ >{\bfseries}m{2cm} m{10cm} }
-	ERC & Ethereum Request for Comments \\
-	EVM & Ethereum Virtual Machine 	\\
-	PoS & Proof of stake \\
-	p2p & peer-to-peer \\
-	SNARK & Succinct Non-interactive Argument of Knowledge \\
-	R1CS & Rank-1 Constraint System \\
-	ZK  & Zero Knowledge           	\\
+	ERC & Ethereum Request for Comments 					\\
+	EVM & Ethereum Virtual Machine 							\\
+	L1 	& Layer 1 											\\
+	L2 	& Layer 2 											\\
+	PoS & Proof of stake 									\\
+	p2p & peer-to-peer 										\\
+	SNARK & Succinct Non-interactive Argument of Knowledge 	\\
+	R1CS & Rank-1 Constraint System 						\\
+	ZK  & Zero Knowledge           							\\
+	ZkEVM  & Zero Knowledge Ethereum Virtual Machine   		\\
 	ZKP & Zero Knowledge Proof
 \end{tabular}
 
