first part of zkevm analysis

--- a/dp1/doc/bibliography.bib
+++ b/dp1/doc/bibliography.bib
@@ -85,3 +85,55 @@
 	year = {},
 	note = {[Accessed 31-05-2025]},
 }
+
+@misc{VitalikButerinZkEVMTypes,
+	author = {},
+	title = { {T}he different types of {Z}{K}-{E}{V}{M}s  --- vitalik.eth.limo},
+	howpublished = {\url{https://vitalik.eth.limo/general/2022/08/04/zkevm.html}},
+	year = {},
+	note = {[Accessed 01-06-2025]},
+}
+
+@misc{Cairo,
+      author = {Lior Goldberg and Shahar Papini and Michael Riabzev},
+      title = {Cairo – a Turing-complete {STARK}-friendly {CPU} architecture},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2021/1063},
+      year = {2021},
+      url = {https://eprint.iacr.org/2021/1063}
+}
+
+@inbook{ValiantIVC,
+  title = {Incrementally Verifiable Computation or Proofs of Knowledge Imply Time/Space Efficiency},
+  ISBN = {9783540785248},
+  url = {http://dx.doi.org/10.1007/978-3-540-78524-8_1},
+  DOI = {10.1007/978-3-540-78524-8_1},
+  booktitle = {Theory of Cryptography},
+  publisher = {Springer Berlin Heidelberg},
+  author = {Valiant,  Paul},
+  pages = {1–18}
+}
+
+@misc{RecursiveSNARKsIVC,
+      author = {Eli Ben-Sasson and Alessandro Chiesa and Eran Tromer and Madars Virza},
+      title = {Scalable Zero Knowledge via Cycles of Elliptic Curves},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2014/595},
+      year = {2014},
+      url = {https://eprint.iacr.org/2014/595}
+}
+
+@misc{Plonky2,
+	author = {},
+	title = {plonky2/plonky2/plonky2.pdf at main · 0x{P}olygon{Z}ero/plonky2 --- github.com},
+	howpublished = {\url{https://github.com/0xPolygonZero/plonky2/blob/main/plonky2/plonky2.pdf}},
+	year = {},
+	note = {[Accessed 01-06-2025]},
+}
+
+@misc{Halo2,
+	author = {},
+	title = {halo2 - {T}he halo2 {B}ook --- zcash.github.io},
+	howpublished = {\url{https://zcash.github.io/halo2/index.html}},
+	year = {},
+	note = {[Accessed 01-06-2025]},
+}
+
