--- a/dp1/doc/content/analysis/analysis.tex
+++ b/dp1/doc/content/analysis/analysis.tex
@@ -1,4 +1,4 @@
-\chapter{Analysis}\label{chapter:analysis}
+\chapter{Analysis}
 
 % the analysis structure:
 %	1. ethereum
@@ -23,3 +23,5 @@
 \input{content/analysis/ethereum.tex}
 
 \input{content/analysis/snarkification.tex}
+
+\input{content/analysis/zkevm.tex}
