--- a/dp1/doc/initialize.tex
+++ b/dp1/doc/initialize.tex
@@ -52,3 +52,22 @@
   }%
 }
 \makeatother
+
+\newcommand{\createFigure}[2]{
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=\textwidth]{#1}
+        \caption{#2}
+        \vspace{0.5cm}
+    \end{figure}
+}
+
+\newenvironment{tikzFigure}{
+	\begin{figure}[htbp]
+		\vspace{0.5cm}
+        \centering
+	}
+	{
+		\vspace{0.5cm}
+	\end{figure}
+}
