--- a/dp1/doc/bibliography.bib
+++ b/dp1/doc/bibliography.bib
@@ -137,3 +137,10 @@
 	note = {[Accessed 01-06-2025]},
 }
 
+@misc{Nova,
+      author = {Abhiram Kothapalli and Srinath Setty and Ioanna Tzialla},
+      title = {Nova: Recursive Zero-Knowledge Arguments from Folding Schemes},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2021/370},
+      year = {2021},
+      url = {https://eprint.iacr.org/2021/370}
+}
