--- a/dp1/doc/pages/abbreviations.tex
+++ b/dp1/doc/pages/abbreviations.tex
@@ -11,6 +11,7 @@
 
 \begin{tabular}{ >{\bfseries}m{2cm} m{10cm} }
 	EVM & Ethereum Virtual Machine 							\\
+	ISA & Instruction Set Architecture 						\\
 	L1 	& Layer 1 											\\
 	L2 	& Layer 2 											\\
 	PoS & Proof of stake 									\\
@@ -20,6 +21,7 @@
 	R1CS & Rank-1 Constraint System 						\\
 	ZK  & Zero Knowledge           							\\
 	ZkEVM  & Zero Knowledge Ethereum Virtual Machine   		\\
+	ZkVM  & Zero Knowledge Virtual Machine   				\\
 	ZKP & Zero Knowledge Proof
 \end{tabular}
 
