--- a/dp1/doc/values.tex
+++ b/dp1/doc/values.tex
@@ -20,16 +20,17 @@
 \newcommand{\FIITtitleSK}[0] {Návrh riešení využívajúcich dôkazy s nulovým vedomím v Ethereum ekosystéme}
 \newcommand{\FIITauthor}[0] {Lukáš Častven}
 \newcommand{\FIITsupervisor}[0] {Ing. Kristián Košťál PhD.}
-\newcommand{\FIITevidenceNumber}[0] {TODO}
+\newcommand{\FIITevidenceNumber}[0] {-}
+% \newcommand{\FIITevidenceNumber}[0] {TODO}
 \newcommand{\FIITdate}[0] {May 2025}
 \newcommand{\FIITdateSK}[0] {Máj 2025}
 \newcommand{\FIITstudyProgram}[0] {Intelligent software systems}
 \newcommand{\FIITstudyProgramSK}[0] {Inteligentné softvérové systémy}
 \newcommand{\FIITstudyField}[0] {Computer Science}
-\newcommand{\FIITdegreeCourseSK}[0] {TODO}
+% \newcommand{\FIITdegreeCourseSK}[0] {TODO}
 \newcommand{\FIITinstitute}[0] {Institute of Computer Engineering and Applied Informatics}
 \newcommand{\FIITinstituteSK}[0] {Ústav počítačového inžinierstva a aplikovanej informatiky}
 \newcommand{\FIITsignPlace}[0] {In Bratislava, }
 \newcommand{\FIITsignPlaceSK}[0] {V Bratislave, }
 \newcommand{\FIITsignDate}[0] {31.5.2025}
-\newcommand{\FIITArchiveName}[0] {TODO}
+% \newcommand{\FIITArchiveName}[0] {TODO}
