--- a/dp1/doc/bibliography.bib
+++ b/dp1/doc/bibliography.bib
@@ -144,3 +144,111 @@
       year = {2021},
       url = {https://eprint.iacr.org/2021/370}
 }
+
+@misc{RISCV,
+	author = {},
+	title = {{R}{I}{S}{C}-{V} {R}atified {S}pecifications --- riscv.org},
+	howpublished = {\url{https://riscv.org/specifications/ratified/}},
+	year = {},
+	note = {[Accessed 01-06-2025]},
+}
+
+@misc{RISC0,
+	author = {},
+	title = {dev.risczero.com},
+	howpublished = {\url{https://dev.risczero.com/proof-system-in-detail.pdf}},
+	year = {},
+	note = {[Accessed 01-06-2025]},
+}
+
+@misc{RISC0ProofSystem,
+	author = {},
+	title = {{T}he {R}{I}{S}{C} {Z}ero {S}{T}{A}{R}{K} {P}rotocol | {R}{I}{S}{C} {Z}ero {D}eveloper {D}ocs --- dev.risczero.com},
+	howpublished = {\url{https://dev.risczero.com/proof-system/proof-system-sequence-diagram}},
+	year = {},
+	note = {[Accessed 01-06-2025]},
+}
+
+@misc{SP1,
+	author = {},
+	title = {{S}uccinct {D}ocs --- docs.succinct.xyz},
+	howpublished = {\url{https://docs.succinct.xyz/}},
+	year = {},
+	note = {[Accessed 01-06-2025]},
+}
+
+@misc{Jolt,
+      author = {Arasu Arun and Srinath Setty and Justin Thaler},
+      title = {Jolt: {SNARKs} for Virtual Machines via Lookups},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2023/1217},
+      year = {2023},
+      url = {https://eprint.iacr.org/2023/1217}
+}
+
+@misc{Groth16,
+      author = {Jens Groth},
+      title = {On the Size of Pairing-based Non-interactive Arguments},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2016/260},
+      year = {2016},
+      url = {https://eprint.iacr.org/2016/260}
+}
+
+@InProceedings{FRI,
+  author =	{Ben-Sasson, Eli and Bentov, Iddo and Horesh, Yinon and Riabzev, Michael},
+  title =	{{Fast Reed-Solomon Interactive Oracle Proofs of Proximity}},
+  booktitle =	{45th International Colloquium on Automata, Languages, and Programming (ICALP 2018)},
+  pages =	{14:1--14:17},
+  series =	{Leibniz International Proceedings in Informatics (LIPIcs)},
+  ISBN =	{978-3-95977-076-7},
+  ISSN =	{1868-8969},
+  year =	{2018},
+  volume =	{107},
+  editor =	{Chatzigiannakis, Ioannis and Kaklamanis, Christos and Marx, D\'{a}niel and Sannella, Donald},
+  publisher =	{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  address =	{Dagstuhl, Germany},
+  URL =		{https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.ICALP.2018.14},
+  URN =		{urn:nbn:de:0030-drops-90183},
+  doi =		{10.4230/LIPIcs.ICALP.2018.14},
+  annote =	{Keywords: Interactive proofs, low degree testing, Reed Solomon codes, proximity testing}
+}
+
+@misc{Plonk,
+      author = {Ariel Gabizon and Zachary J.  Williamson and Oana Ciobotaru},
+      title = {{PLONK}: Permutations over Lagrange-bases for Oecumenical Noninteractive arguments of Knowledge},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2019/953},
+      year = {2019},
+      url = {https://eprint.iacr.org/2019/953}
+}
+
+@misc{STARK,
+      author = {Eli Ben-Sasson and Iddo Bentov and Yinon Horesh and Michael Riabzev},
+      title = {Scalable, transparent, and post-quantum secure computational integrity},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2018/046},
+      year = {2018},
+      url = {https://eprint.iacr.org/2018/046}
+}
+
+@misc{Lasso,
+      author = {Srinath Setty and Justin Thaler and Riad Wahby},
+      title = {Unlocking the lookup singularity with Lasso},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2023/1216},
+      year = {2023},
+      url = {https://eprint.iacr.org/2023/1216}
+}
+
+@misc{OpenVM,
+	author = {},
+	title = {openvm.dev},
+	howpublished = {\url{https://openvm.dev/whitepaper.pdf}},
+	year = {},
+	note = {[Accessed 01-06-2025]},
+}
+
+@misc{DEEP-ALI,
+      author = {Eli Ben-Sasson and Lior Goldberg and Swastik Kopparty and Shubhangi Saraf},
+      title = {{DEEP}-{FRI}: Sampling Outside the Box Improves Soundness},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2019/336},
+      year = {2019},
+      url = {https://eprint.iacr.org/2019/336}
+}
+
