--- a/dp1/doc/packages.tex
+++ b/dp1/doc/packages.tex
@@ -39,7 +39,7 @@
 \usepackage{lipsum}
 \usepackage{minted}
 \usepackage{tikz}
-\usetikzlibrary{shapes.geometric, arrows.meta, positioning, calc}
+\usetikzlibrary{shapes.geometric, arrows.meta, positioning, calc, fit}
 \usepackage{tocloft}
 \usepackage{amsfonts}
 \usepackage{amsmath}
