complete analysis on zkevms

--- a/dp1/doc/bibliography.bib
+++ b/dp1/doc/bibliography.bib
@@ -252,3 +252,10 @@
       url = {https://eprint.iacr.org/2019/336}
 }
 
+@misc{EthProofs,
+	author = {},
+	title = {{E}thproofs | {E}thproofs --- ethproofs.org},
+	howpublished = {\url{https://ethproofs.org/}},
+	year = {},
+	note = {[Accessed 02-06-2025]},
+}
