analysis on lattices and ajtai commitments

--- a/dp1/doc/bibliography.bib
+++ b/dp1/doc/bibliography.bib
@@ -259,3 +259,39 @@
 	year = {},
 	note = {[Accessed 02-06-2025]},
 }
+
+@inproceedings{AjtaiLattices,
+	author = {Ajtai, M.},
+	title = {Generating hard instances of lattice problems (extended abstract)},
+	year = {1996},
+	isbn = {0897917855},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/237814.237838},
+	doi = {10.1145/237814.237838},
+	booktitle = {Proceedings of the Twenty-Eighth Annual ACM Symposium on Theory of Computing},
+	pages = {99–108},
+	numpages = {10},
+	location = {Philadelphia, Pennsylvania, USA},
+	series = {STOC '96}
+}
+
+@misc{LatticeTutorial,
+  doi = {10.48550/ARXIV.2208.08125},
+  url = {https://arxiv.org/abs/2208.08125},
+  author = {Li,  Yang and Ng,  Kee Siong and Purcell,  Michael},
+  keywords = {Cryptography and Security (cs.CR),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {A Tutorial Introduction to Lattice-based Cryptography and Homomorphic Encryption},
+  publisher = {arXiv},
+  year = {2022},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+@misc{LatticesInZKP,
+      author = {Vadim Lyubashevsky and Ngoc Khanh Nguyen and Maxime Plancon},
+      title = {Lattice-Based Zero-Knowledge Proofs and Applications: Shorter, Simpler, and More General},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2022/284},
+      year = {2022},
+      url = {https://eprint.iacr.org/2022/284}
+}
+
