--- a/dp1/doc/content/analysis/analysis.tex
+++ b/dp1/doc/content/analysis/analysis.tex
@@ -12,7 +12,6 @@
 % 	3. execution layer snarkification => zkEVM, what it is
 %		a. RISC-V zkVMs with EVMs binaries compiled to RISC-V
 %		b. nowadays -> recursion and folding
-
 %		c. comparison of different zkVMs/zkEVMs (https://ethproofs.org/)
 %	4. Proposed lattice based ZK system
 %		a. LatticeFold
@@ -26,3 +25,5 @@
 \input{content/analysis/snarkification.tex}
 
 \input{content/analysis/zkevm.tex}
+
+\input{content/analysis/lattices.tex}
