complete lattices analysis

--- a/dp1/doc/bibliography.bib
+++ b/dp1/doc/bibliography.bib
@@ -295,3 +295,46 @@
       url = {https://eprint.iacr.org/2022/284}
 }
 
+@misc{LaBRADOR,
+      author = {Ward Beullens and Gregor Seiler},
+      title = {{LaBRADOR}: Compact Proofs for {R1CS} from Module-{SIS}},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2022/1341},
+      year = {2022},
+      url = {https://eprint.iacr.org/2022/1341}
+}
+
+@misc{Greyhound,
+      author = {Ngoc Khanh Nguyen and Gregor Seiler},
+      title = {Greyhound: Fast Polynomial Commitments from Lattices},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2024/1293},
+      year = {2024},
+      doi = {10.1007/978-3-031-68403-6_8},
+      url = {https://eprint.iacr.org/2024/1293}
+}
+
+@misc{LatticeFold,
+      author = {Dan Boneh and Binyi Chen},
+      title = {{LatticeFold}: A Lattice-based Folding Scheme and its Applications to Succinct Proof Systems},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2024/257},
+      year = {2024},
+      url = {https://eprint.iacr.org/2024/257}
+}
+
+
+@misc{LatticeFoldPlus,
+      author = {Dan Boneh and Binyi Chen},
+      title = {{LatticeFold}+: Faster, Simpler, Shorter Lattice-Based Folding for Succinct Proof Systems},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2025/247},
+      year = {2025},
+      url = {https://eprint.iacr.org/2025/247}
+}
+
+
+@misc{HyperNova,
+      author = {Abhiram Kothapalli and Srinath Setty},
+      title = {{HyperNova}: Recursive arguments for customizable constraint systems},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2023/573},
+      year = {2023},
+      url = {https://eprint.iacr.org/2023/573}
+}
+
