--- a/dp1/doc/pages/abbreviations.tex
+++ b/dp1/doc/pages/abbreviations.tex
@@ -14,6 +14,7 @@
 	ISA & Instruction Set Architecture 						\\
 	L1 	& Layer 1 											\\
 	L2 	& Layer 2 											\\
+	PCS & Polynomial Commitment Scheme 						\\
 	PoS & Proof of stake 									\\
 	p2p & peer-to-peer 										\\
 	SNARK & Succinct Non-interactive Argument of Knowledge 	\\
