--- a/dp1/doc/content/analysis/ethereum.tex
+++ b/dp1/doc/content/analysis/ethereum.tex
@@ -1,4 +1,4 @@
-\section{Ethereum}
+\section{Ethereum}\label{sec:ethereum}
 
 Ethereum is a decentralized, open-source blockchain with smart contract
 functionality \cite{ethereumEthereumWhitepaper}. Conceptualized by Vitalik
