--- a/dp1/doc/content/analysis/lattices.tex
+++ b/dp1/doc/content/analysis/lattices.tex
@@ -1,4 +1,4 @@
-\section{Lattice-based cryptography}
+\section{Lattice-based cryptography}\label{sec:lattices}
 
 Lattice-based cryptography has emerged as a significant area of research,
 particularly due to its potential for constructing cryptographic primitives
