--- a/dp1/doc/content/analysis/snarkification.tex
+++ b/dp1/doc/content/analysis/snarkification.tex
@@ -1,4 +1,4 @@
-\section{Snarkification of Ethereum}
+\section{Snarkification of Ethereum}\label{sec:snarkification}
 
 As discussed in sections on consensus (\ref{subsec:ethereum_consensus}) and
 execution layer (\ref{subsec:ethereum_execution}), nodes on each layer must expend
