--- a/dp1/doc/content/analysis/zkevm.tex
+++ b/dp1/doc/content/analysis/zkevm.tex
@@ -1,4 +1,4 @@
-\section{ZkEVM}
+\section{ZkEVM}\label{sec:zkevm}
 
 ZkEVM, as mentioned in \ref{subsec:snarkifying_execution}, is a modified EVM,
 which given state and list of transactions produces next state and a proof $\pi$
