--- a/dp1/doc/main.tex
+++ b/dp1/doc/main.tex
@@ -59,6 +59,8 @@
 % Begin references segment
 \begin{refsegment}
 
+    \include{content/introduction}
+
     \include{content/analysis/analysis}
 
     % Bibliography
