--- a/dp1/doc/main.tex
+++ b/dp1/doc/main.tex
@@ -36,8 +36,7 @@
 
 \include{pages/declaration}
 
-% TODO Annotation
-% \include{pages/annotation}
+\include{pages/annotation}
 
 % Table of contents
 \ifx\FIITlagEN\undefined
