time schedule and cleaning

--- a/dp1/doc/templates/header.tex
+++ b/dp1/doc/templates/header.tex
@@ -21,7 +21,7 @@
     \ifx\FIITlagEN\undefined
     Evidenčné číslo: \FIITevidenceNumber
     \else
-    Reg. No.: \FIITevidenceNumber
+    % TODO Reg. No.: \FIITevidenceNumber
     \fi
 \par\end{center}
 \vfill{}
