--- a/dp1/doc/values.tex
+++ b/dp1/doc/values.tex
@@ -14,13 +14,12 @@
 \newcommand{\FIITuniversitySK}[0] {Slovenská technická univerzita v Bratislave}
 \newcommand{\FIITfaculty}[0] {Faculty of informatics and information technologies}
 \newcommand{\FIITfacultySK}[0] {Fakulta informatiky a informačných technológií}
-\newcommand{\FIITthesis}[0] {Engineer's Thesis}
-\newcommand{\FIITthesisSK}[0] {Inžinierska práca}
+\newcommand{\FIITthesis}[0] {Progress report on DP1 solution}
+\newcommand{\FIITthesisSK}[0] {Priebežná správa o riešení DP1}
 \newcommand{\FIITtitle}[0] {Designing Zero-Knowledge Proof Solutions in Ethereum ecosystem}
 \newcommand{\FIITtitleSK}[0] {Návrh riešení využívajúcich dôkazy s nulovým vedomím v Ethereum ekosystéme}
 \newcommand{\FIITauthor}[0] {Lukáš Častven}
 \newcommand{\FIITsupervisor}[0] {Ing. Kristián Košťál PhD.}
-\newcommand{\FIITevidenceNumber}[0] {-}
 % \newcommand{\FIITevidenceNumber}[0] {TODO}
 \newcommand{\FIITdate}[0] {May 2025}
 \newcommand{\FIITdateSK}[0] {Máj 2025}
