--- a/dp1/doc/pages/time_schedule.tex
+++ b/dp1/doc/pages/time_schedule.tex
@@ -10,47 +10,46 @@
 \pagenumbering{arabic}
 \renewcommand*{\thepage}{A-\arabic{page}}
 
-\section{Winter semester}
+\section{DP1}
 
-\begin{tabular}{|l||l|}
+\begin{tabular}{|l||p{0.8\textwidth}|}
 \hline
-1\textsuperscript{st}-4\textsuperscript{th} week    & Exploring ZK ecosystem and finding suitable ZK theme \\
+1\textsuperscript{st}-4\textsuperscript{th} week    & Researching recursive proofs, folding schemes, lattice based cryptography \\
 \hline
-5\textsuperscript{th}-8\textsuperscript{th} week    & Researching ZK-EVM, ZK-Rollups, Stealth Addresses \\
+5\textsuperscript{th}-7\textsuperscript{th} week    & Researching Ethereum's architecture \\
 \hline
-9\textsuperscript{th}-11\textsuperscript{th} week   & Researching Stealth Addresses with ZKP scheme \\
+8\textsuperscript{th}-9\textsuperscript{th} week    & Researching Beam Chain initiative \\
 \hline
-12\textsuperscript{th}-13\textsuperscript{th} week  & Writing Analysis and Solution design \\
+10\textsuperscript{th}-11\textsuperscript{th} week  & Researching ZkEVMs, ZkVMs \\
+\hline
+12\textsuperscript{th}-13\textsuperscript{th} week  & Writing analysis \\
 \hline
 \end{tabular}
 
-\section{Summer semester}
-\begin{tabular}{|l||l|}
+\section{DP2}
+
+\begin{tabular}{|l||p{0.8\textwidth}|}
 \hline
-1\textsuperscript{st}-2\textsuperscript{nd} week    & Learning CIRCOM  \\
+1\textsuperscript{st}-3\textsuperscript{rd} week    & Designing a ZKP proof system based on lattices  \\
 \hline
-3\textsuperscript{rd}-4\textsuperscript{th} week    & Implementing ZKP with CIRCOM  \\
+4\textsuperscript{th}-6\textsuperscript{th} week    & Designing a ZkVM based on new lattice based ZKP system  \\
 \hline
-5\textsuperscript{th}-7\textsuperscript{th} week    & Implementing smart contracts in Solidity  \\
+7\textsuperscript{th}-12\textsuperscript{th} week   & Implementing a ZkVM  \\
 \hline
-8\textsuperscript{th}-9\textsuperscript{th} week    & Implementing browser experimentation wallet  \\
-\hline
-10\textsuperscript{th}-11\textsuperscript{th} week  & Solution testing  \\
-\hline
-12\textsuperscript{th}-13\textsuperscript{th} week  & Revision of final document  \\
+13\textsuperscript{th} week  & Documenting design and implementation  \\
 \hline
 \end{tabular}
 
-The beginning of this work started in different direction. First application of
-ZKPs in the ZK-EVM or in ZK-Rollups was being researched and considered. However,
-after discussion with supervisor, these themes were considered too advanced and
-a more suitable theme for Stealth Addresses with ZKP was chosen. The remainder
-of the winter semester was split between researching how a stealth address scheme
-with ZKPs can be designed and implemented, and then the solution design was proposed.
+\section{DP3}
 
-Start of the summer semester was more focused on learning CIRCOM for implementing
-the a circuit needed to generate and verify ZKPs. Then the main part of the semester
-was spent implementing the ZKP circuit, implementing set of smart contracts
-and finally a proof of concept browser wallet supporting implemented scheme.
-Last four weeks were spent on testing, fixing bugs and revising this document.
-
+\begin{tabular}{|l||p{0.8\textwidth}|}
+\hline
+1\textsuperscript{st}-3\textsuperscript{rd} week    & Testing ZkEVM compiled into RISC-V in designed ZkVM \\
+\hline
+4\textsuperscript{th}-6\textsuperscript{th} week    & Benchmarking performance, proof sizes of the ZkEVM \\
+\hline
+7\textsuperscript{th}-10\textsuperscript{th} week   & Optimizing ZkVM \\
+\hline
+11\textsuperscript{th}-13\textsuperscript{th} week  & Writing final version of document \\
+\hline
+\end{tabular}
